--- a/style.css
+++ b/style.css
@@ -3,21 +3,23 @@
     padding: 0px;
 }
 
-  body{
-
+ 
+.min-section{
 background-color:
 rgba(255, 144, 14, 0.1);
-  }
-
+}
 /* nav section */
 .nav-section{
     display: flex;
     justify-content: space-between;
+    
 }
 
 /* nav-title */
 .nav-titel{
     margin-top: 50px;
+    margin-left:228px ;
+    font-size: 20px;
 }
 
 /* nev ul */
@@ -62,4 +64,173 @@ height: 65px;
  font-size: 20px;
  border:none ;
  border-radius: 10px;
+ margin-bottom:50px ;
+}
+
+
+/* section-2 */
+.section-2{
+background-color: white;
+}
+.teams{
+    margin-left:200px ;
+    margin-top:130px;
+    display:grid;
+    grid-template-columns: repeat(2,.24fr);
+}
+.heading-img{
+    display: flex;
+}
+.quick-list{
+    width:400px;
+    margin-top:285px;
+    font-size: 25px;
+    line-height:53px;
+    margin-left:40px ;
+}
+.Quick-list{
+    color: rgba(114, 114, 114, 1);
+}
+.features{
+    color: rgba(255, 144, 14, 1);
+}
+.pera-2{
+    font-size: 16px;
+    font-weight:400;
+    line-height: 25px;
+     color:  rgba(114, 114, 114, 1)
+    }
+    /* section 3 */
+    .section-3{
+display: flex;
+justify-content: center;
+margin-top:130px ;
+margin-left: 130px;
+    }
+
+    /* heading-information */
+    .heading-information{
+        width: 400px;
+        font-weight: 700;
+font-size: 30px;
+line-height: 53px;
+    }
+
+    .heading-3{
+        border-style:none ;
+        border-bottom:3px solid rgb(0, 0, 255)  ;
+        border-left:5px solid 
+        rgba(255, 144, 14, 1) ;
+padding-left:23px;
+padding-bottom: 20px;
+margin-bottom:24px ;
+    }
+
+    /* pera-3 */
+    .pera-3{
+ width: 400px;
+    }
+    .information{
+        width: 500px;
+        margin-top: 30px;
+        margin-right: 140px;
+padding: 30px 42px 30px 30px;
+box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.307)
+}
+
+    /* architect-img */
+    .architect-img{
+margin-top:200px ;
+    }
+
+.but-2{
+    position: absolute;
+width: 240px;
+height: 140px;
+left: 882px;
+top: 2640px;
+background: #FF900E;
+border-radius: 8px;
+font-weight: 700;
+font-size:40px;
+color: white;
+border-style: none;
+}
+.but-prra{
+    font-size: 15px;
+}
+.header-4{
+    line-height: 53px;
+    margin-top: 130px;
+    margin-left: 240px;
+}
+
+.pera-4{
+    width: 450px;
+    margin-left: 240px;
+}
+
+.logo{
+    display: flex;
+    justify-content: center;
+  text-align: center;
+}
+
+.ridon.projects .coustomers.email:hover{
+
+    
+}
+.ridon,.projects, .coustomers,.email{
+border:2.5px solid #FF900E;
+width: 140px;
+height: 170px;
+margin-left:50px;
+margin-top: 100px;
+}
+/* last section  */
+.last-part{
+    margin-top: 180px;
+    text-align: center;
+}
+/* brand */
+.brand{
+    margin-top: 50px;
+   margin-bottom: 150px;
+    display: flex;
+    justify-content: center;
+    gap: 130px;
+}
+
+.log-info{
+    display: flex;
+    margin: 0px 200px 20px 200px;
+    align-items: center;
+   justify-content: center;
+   height: 200px;
+   gap: 20px;
+   box-shadow: 0px 4px 10px rgba(111, 108, 108, 0.492)
+}
+input{
+    width: 260px;
+    height: 45px;
+}
+button{
+    border-style: none;
+border-radius: 50px;
+    width: 200px;
+    height: 50px;
+    font-weight: 700;
+    font-size: 15px;
+    color: white;
+    background-color: #ff0000f4;
+}
+footer{
+    margin-left:242px;
+    background-color:rgba(255, 244, 231, 1);
+ text-align: center;
+ font-weight: 700;
+    width:1800px;
+    height: 100px;
+    font-size: 20px;
+    padding:40px 0px 4px 0px;
 }
