--- a/style.css
+++ b/style.css
@@ -225,12 +225,26 @@ border-radius: 50px;
     background-color: #ff0000f4;
 }
 footer{
+    margin-right: 920px;
     margin-left:242px;
     background-color:rgba(255, 244, 231, 1);
- text-align: center;
  font-weight: 700;
-    width:1800px;
-    height: 100px;
-    font-size: 20px;
-    padding:40px 0px 4px 0px;
+    width:1030px;
+    height: 70px;
+text-align: center;
+    margin-bottom: 100px;
+    margin-top: 100px;
+}
+.last-pera{
+    text-decoration: #ff0000f4;
+    position: absolute;
+    font-weight: 400;
+font-size: 20px;
+margin-top: 40px;
+}
+.logo:hover{
+
+   font-weight:900 ;
+    transition: transform 1s ease-in-out ;
+    transform: translate(-420px) ;
 }
